--- a/JSON_Forms_Setup/src/App.css
+++ b/JSON_Forms_Setup/src/App.css
@@ -1,62 +1,9 @@
 body{
-  width:80%;
-  margin-left:auto;
-  margin-right: auto;
+  width:100%;
+  margin:0;
   background-color:white;
 }
-form{
-  background-color:#060b8d;
-  box-shadow: 5px 5px 8px #cbd9d8;
-  border-radius: 50px;
-  padding:50px 30px;
-  border:none;
+fieldset{
+border:none;
 }
-form label{
-  font-weight: bold;
- margin-bottom: 45px;
- color:white;
-}
-#root_userName,#root_password{
-  border:none;
-  background-color: white;
-  width:95%;
-  margin:25px auto;
-  border-radius: 10px;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  padding-left: 10px;
-  box-shadow: 2px 2px 2px rgb(0, 234, 255);
-  font-weight: bold;
-}
-#root_userName::placeholder,#root_password::placeholder{
-  font-weight: 300;
-}
-#root_userName:hover,#root_password:hover{
-  border: none;
-}
-.submit{
-  width: 100%;
-  margin:10px auto;
-  text-align: center;
-  background-color: rgb(115, 190, 178);
-  padding: 10px 0;
-  border-radius: 12px;
-  margin:40px 0;
-  border:none;
-  box-shadow: 2px 2px 2px rgb(224, 231, 228);
-}
-.submit:hover{
-  font-size: 15px;
-  background-color:green;
-  color:white;
-}
-.submit:active{
-  background-color:rgb(25, 255, 25);
- 
-}
-#root_fName,#root_lName{
- padding:8px 0;
- width:80%;
- margin:20px auto;
- border-radius: 10px;
-}
+
