--- a/Master_Framework_Setup/src/App.css
+++ b/Master_Framework_Setup/src/App.css
@@ -1,7 +1,8 @@
 body{
-   background-color: #E7EBF0;
+   background-color: #F0F1FF;
+   margin:0;
 }
 .App{
    
-    margin:0 2vw;
+    margin:0;
 }
